[project]
name = "keycloak-jwt-checker"
version = "1.0.1"
description = "A little tool for debugging claims contained in JSON Web Tokens (JWT) issued by Keycloak confidential clients"
authors = [
    {name = "Max Pfeiffer",email = "max@maxpfeiffer.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-keycloak (>=7.0.2,<7.1.0)",
    "click (>=8.2.1,<9.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/max-pfeiffer/keycloak-jwt-checker"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
ruff = "0.14.14"
pytest = "9.0.2"
testcontainers = "4.14.0"
coverage = "7.13.1"
pytest-cov = "7.0.0"

[tool.poetry.scripts]
keycloak-jwt-checker = 'keycloak_jwt_checker:cli'

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
